Add spacro dependency, oops

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/nlpdata"]
 	path = lib/nlpdata
 	url = git@github.com:julianmichael/nlpdata.git
+[submodule "lib/spacro"]
+	path = lib/spacro
+	url = https://github.com/julianmichael/spacro.git
